tests/const_any_collapse/error.txt
Validation error: ./tests/const_any_collapse/const_any_collapse.fae:1
 No symbol `unknown` in the current scope
  1| const A = unknown
               ^^^^^^^
